Mon Feb 23 20:18:49 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (inspect_timeval_as_abstime): use time_t
	  variable to avoid a warning on environments which use long as
	  tv_sec as NetBSD.

Mon Feb 23 15:53:30 2009  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_index, rb_ary_rindex): We know that argc is not
	  zero when we reach here.

	* array.c (rb_ary_initialize, rb_ary_index): Shrink a double
	  space. (NFC)

Mon Feb 23 14:47:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (mv): added description for the case of
	  different partitions.  [ruby-talk:329072]

Mon Feb 23 10:19:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (USE_SYMBOL_AS_METHOD_NAME): Module#methods,
	  #singleton_methods and so on return Symbols.  [ruby-talk:328775]

Mon Feb 23 10:15:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja: added macros for the Compatibilities.

Mon Feb 23 03:19:37 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: define SO_TIMESTAMPNS and SCM_TIMESTAMPNS
	  if available.

Mon Feb 23 02:54:31 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_inspect): use SCM_TIMESTAMP instead
	  of SO_TIMESTAMP.  SCM_TIMESTAMP != SO_TIMESTAMP on MacOS X.

Mon Feb 23 02:44:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (inspect_timeval_as_abstime): new function.
	  (ancillary_inspect): use it for SO_TIMESTAMP.

Mon Feb 23 02:26:44 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_timeval_as_interval): renamed from
	  inspect_timeval.

Mon Feb 23 02:10:09 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_timeval): fix the size test.

Sun Feb 22 22:42:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): should recalculate coderange.
	  [ruby-core:22326] (reopened at [ruby-core:22328])

Sun Feb 22 20:09:29 2009  Tanaka Akira  <akr@fsij.org>
