@@ -668,6 +668,7 @@ SCM_CREDS
 SCM_TIMESTAMP
 SCM_TIMESTAMPNS
 SCM_UCRED
+SCM_BINTIME
 
 LOCAL_PEERCRED
 LOCAL_CREDS
